# ai4bmr-learn

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: geopandas-file-formats.py  image-resize.py  read-geodataframe-patches.py
clis/: clf.py  dinov1.py  maev1.py  main.py  vanilla.py
configs/: clf-cords2024-resnet.yaml  clf-imagenet-resnet.yaml  debug-full.yaml  debug.yaml  dinov1-cords2024-vit.yaml  dinov1-imagenet-resnet.yaml  dinov1-imagenet-vit.yaml  dinov1-resnet.yaml  dinov1-vit-v2.yaml  dinov1-vit.yaml  eval_rf.yaml  eval_rf_dummy.yaml  eval_rf_pca.yaml  image-features.yaml  mae.yaml  maev1-imagenet-vit.yaml
configs/Cords2024/: clf-cords2024-graph.yaml  clf-cords2024-resnet.yaml  clf-cords2024-vit.yaml  clf.sh  clf.yaml  dinov1-cords2024-resnet-ft.yaml  dinov1-cords2024-resnet-v2.yaml  dinov1-cords2024-resnet.yaml  dinov1-cords2024-vit-ft.yaml  dinov1-cords2024-vit.yaml  finetune-cords2024-resnet.yaml  maev1-cords2024-vit-ft.yaml  maev1-cords2024-vit.yaml
configs/PCa2025/: clf.yaml  embeddings.yaml  logistic_regression.yaml  maev1-vit.yaml
configs/XeniumFM/: embeddings-geneformer-level=patch.yaml  embeddings-geneformer.yaml  logistic_regression-geneformer-level=patch.yaml
configs/backbones/: resnet.yaml
configs/data/: cord2024.yaml  imagenet.yaml
examples/: compare-dino-transforms.py  czi2tiff.sh  czi2tiff.yaml  dino-light-cifar-10.py  dino-on-points.py  dinov1-cifar-10.py  dinov1-lightly-resnet18.py  dinov1-lightly-vit.py  dinov1-resnet18.py  dinov1-vit.py  dinov1.py  image-features.py  llm-on-points.py  mil-embeddins.py
experiments/: dinov1.py  dinov1_Cords2024.py  finetune_clf_cords_1d_conv.py  finetune_clf_pca2025.py  finetune_linear_cords_1d_conv.py  lightly-dino.py  pca_on_Cords2024.py  train_dinov1_cords.py  train_mae.py  train_mae_cords.py  train_mae_cords_1d_conv.py  train_mae_pca.py  traind_dinov1_cords.py
issues/: class-from-function.py  cuml-neighbors-issue.py  cuml-umap-issue.py  logging-metrics.py  none-default-fail.py  none-default-fail.yaml  parquet-categories-issue.py  transform-issue.py
routines/: abmil_cv.py  cv_abmil.py  eval_abmil.py  eval_linear.py  eval_rf.py  train_mae.py
scribble/: build_object.py  dino-batching.py  dino-cifar10.py  dino.py  pca.py  test_callbacks.py
scripts/: 01-extract-backbone-weights.py  2-mil.py  eval_rf.py  prepare_dataset.py  prepare_embeddings.py
slurm/: beat-compute-embeddings.sbatch  beat-convert-to-ome.sbatch  dinov1-cords2024-sweep.sbatch  dinov1-sweep-2.sbatch  dinov1-sweep.sbatch  dinov1.sbatch  finetune_clf_cords2024_1d.sbatch  finetune_cords2024_1d.sbatch  finetune_linear_cords2024_1d.sbatch  maev1-sweep.sbatch  prepare-beat.sbatch  train_dino_lightly.sbatch  train_dinov1.sbatch  train_dinov1_PCa2025.sbatch  train_dinov1_cifar10.sbatch  train_dinov1_lightly_repoducibility.sbatch  train_mae.sbatch  train_mae_PCa2025.sbatch  train_mae_cords2024.sbatch
slurm/scripts/: beat-compute-embeddings.py  prepare-beat.py
slurm/sweep-Cords2024/: run.py
slurm/sweeps-imagenet/: dinov1-sweep-resnet.sbatch  dinov1-sweep-vit.sbatch  maev1-sweep-vit.sbatch  run.py
src/ai4bmr_learn/: __init__.py  utils.py
tests/: test_DummyDataModule.py  test_NestedCV.py  test_PCaCellFrequencies.py  test_abmil.py  test_abmil_cv.py  test_collate_dataframe.py  test_membership.py  test_nearest_neighbors.py  test_rf_cv.py  test_umap.py
tests/callbacks/: save_transforms.py  test_cache.py  test_image_reconstruction.py
tests/collators/: concat.py  test_geneformer.py  test_graph_from_mask.py
tests/data/: splits.py  test_save_splits.py
tests/datamodules/: dataloader_collection.py  dataset_collection.py  datasetloader_collection.py  image_embeddings.py  test_dataset_folder.py
tests/datasets/: test_bags.py  test_dataset_folder.py  test_items.py  test_mil.py
tests/lit/: test_mil.py
tests/models/: test_mil_aggregations.py
tests/supervised/: mil.py
tests/transform/: test_RandomCrop.py  test_dino_transform.py  test_dino_transform_v2.py
wandb/: latest-run
(+183 files in other folders)
