[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4bmr-learn"
version = "0.1.0"
description = "Collection of learning methods"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adriano Martinelli", email = "adrianom@student.ethz.ch" }]

dependencies = [
  "glom",
  "scikit-learn",
  "loguru",
  "omegaconf",
  "wandb",
  "umap-learn[plot]",
  "scikit-image",
  "torch",
  "pyarrow",
  "torchvision",
  "torchinfo",
  "lightning[pytorch-extra]",
  "matplotlib",
  "seaborn",
  "pandas",
  "openpyxl",
  "einops",
  "opencv-python",
  "timm",
  "jsonargparse[all]",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "igraph",
  "leidenalg",
  "geopandas",
  "openslide-bin",
  "openslide-python",
  "opencv-python",
  "lightly",
  "rich",
  "fastparquet",
]

# Console scripts (CLI)
[project.scripts]
learn = "ai4bmr_learn.cli.main:cli_main"
# Optional extra alias:
# ai4bmr-learn = "ai4bmr_learn.cli.main:cli_main"

# Optional dependency groups (extras)
[project.optional-dependencies]
scanpy = [
  "anndata",
  "rapids-singlecell",
]
dev = [
  "black",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

# Auto-discover packages under src/
[tool.setuptools.packages.find]
where = ["src"]

# If you ship non-.py files via MANIFEST.in, keep this true
[tool.setuptools.dynamic]
# (leave empty unless you dynamically load version/metadata)

[tool.black]
line-length = 120